openbao/gateway/openbao-ui-httproute-istio-re-encryption.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao-ui-istio
  namespace: vault-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openbao-gateway
    namespace: istio-system
    sectionName: https-ui
  hostnames:
  - "vault-ui.lab.local"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: openbao-active
      port: 8200
      weight: 1
